kube/mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27018
              name: mongo
          volumeMounts:
            - name: mongo-volume
              mountPath: /var/lib/mongo/data
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
