kube/peyk_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-payk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-payk
  template:
    metadata:
      labels:
        app: cc-payk
    spec:
      containers:
        - name: payk
          image: erfan272758/cc-payk:0.0.1
          ports:
            - containerPort: 2758
