kube/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27018
      targetPort: 27018
  type: ClusterIP
