kube/peyk_service.yml
apiVersion: v1
kind: Service

metadata:
  name: peyk-service
  labels:
    kubernetes.app: data-source
    app: cc-payk

spec:
  type: ClusterIP
  selector:
    app: cc-payk
  ports:
    - protocol: TCP
      port: 2758
      targetPort: 2758
